# DirectX-Deconfused

./: .clang-format  .gitattributes  CMakeLists.txt  CMakeMacros.cmake  CMakeValues.cmake  LICENSE  README.md  build.sh  rebuild.sh
Application/: Application1.cpp  Application2.cpp  CMakeLists.txt  CmakeLists.txt
Application/Resources/: CMakeLists.txt
Application/Source/: CMakeLists.txt  FpsCounter.h  Main.cpp
ApplicationDX12/: CMakeLists.txt
ApplicationDX12/Source/: CMakeLists.txt  Main.cpp
ExternalLibraries/DirectXTex/: CMakeLists.txt  version.txt
LibraryDX12/: CMakeLists.txt
LibraryDX12/Api/: ApplicationImpl.cpp  ApplicationImpl.h  CMakeLists.txt  CameraImpl.cpp  CameraImpl.h  LightImpl.cpp  LightImpl.h  LoggerImpl.cpp  MeshImpl.cpp  MeshImpl.h  ObjectImpl.cpp  ObjectImpl.h  SceneImpl.cpp  SceneImpl.h  TextureImpl.cpp  TextureImpl.h  WindowImpl.cpp  WindowImpl.h
LibraryDX12/Application/: ApplicationImpl.cpp  ApplicationImpl.h  CMakeLists.txt  D2DContext.cpp  D2DContext.h  SettingsImpl.cpp  SettingsImpl.h
LibraryDX12/CommandList/: CMakeLists.txt  CommandAllocatorController.cpp  CommandAllocatorController.h  CommandAllocatorManager.cpp  CommandAllocatorManager.h  CommandList.cpp  CommandList.h  CommandListInserter.cpp  CommandListInserter.h  CommandQueue.cpp  CommandQueue.h  ResourceBindingType.cpp  ResourceBindingType.h
LibraryDX12/ConstantBuffers/: CMakeLists.txt  ConstantBuffers.h  ConstantBuffersDefs.inl  ConstantBuffersUndefs.inl
LibraryDX12/Descriptor/: CMakeLists.txt  CpuDescriptorAllocation.cpp  CpuDescriptorAllocation.h  CpuDescriptorHeap.cpp  CpuDescriptorHeap.h  DescriptorAllocation.cpp  DescriptorAllocation.h  DescriptorController.cpp  DescriptorController.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorManager.cpp  DescriptorManager.h  GpuDescriptorHeapController.cpp  GpuDescriptorHeapController.h
LibraryDX12/ExternalHeaders/: CMakeLists.txt  d3dx12.h
LibraryDX12/ExternalHeaders/Wrappers/: d3dx12.h
LibraryDX12/Include/DXD/: Application.h  CMakeLists.txt  CallbackHandler.h  Camera.h  DXD.h  Event.h  Export.h  Light.h  Logger.h  Mesh.h  NonCopyableAndMovable.h  Object.h  PostProcess.h  Scene.h  Settings.h  Sprite.h  Text.h  Texture.h  Window.h
LibraryDX12/PipelineState/: CMakeLists.txt  DescriptorTable.cpp  DescriptorTable.h  PipelineState.cpp  PipelineState.h  PipelineStateController.cpp  PipelineStateController.h  RootSignature.cpp  RootSignature.h  ShaderRegister.h  StaticSampler.h
LibraryDX12/Renderer/: CMakeLists.txt  DeferredShadingRenderer.cpp  DeferredShadingRenderer.h  PostProcessRenderer.cpp  PostProcessRenderer.h  Renderer.cpp  Renderer.h  ShadowsRenderer.cpp  ShadowsRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
LibraryDX12/Resource/: CMakeLists.txt  ConstantBuffer.cpp  ConstantBuffer.h  ConstantBuffers.h  D2DWrappedResource.cpp  D2DWrappedResource.h  RenderTarget.cpp  RenderTarget.h  Resource.cpp  Resource.h  ResourceState.cpp  ResourceState.h  ResourceStateController.cpp  ResourceStateController.h  ResourceUsageTracker.cpp  ResourceUsageTracker.h  TextureImpl.cpp  TextureImpl.h  VertexOrIndexBuffer.h
LibraryDX12/Scene/: CMakeLists.txt  CameraImpl.cpp  CameraImpl.h  LightImpl.cpp  LightImpl.h  MeshImpl.cpp  MeshImpl.h  ObjectImpl.cpp  ObjectImpl.h  PostProcessImpl.cpp  PostProcessImpl.h  RenderData.cpp  RenderData.h  SceneImpl.cpp  SceneImpl.h  SpriteImpl.cpp  SpriteImpl.h  TextImpl.cpp  TextImpl.h
LibraryDX12/Shaders/: CMakeLists.txt  dof_PS.hlsl  dof_blur_PS.hlsl  fog_PS.hlsl  generate_mip_maps_CS.hlsl  lighting_PS.hlsl  pixel.hlsl  pixel_lighting.hlsl  pixel_normal.hlsl  pixel_normal_sm.hlsl  pixel_normal_texture.hlsl  pixel_post_process.hlsl  pixel_post_process_apply_bloom.hlsl  pixel_post_process_black_bars.hlsl  pixel_post_process_convolution.hlsl  pixel_post_process_gaussian_blur.hlsl  pixel_ssao.hlsl  sprite_sampler_PS.hlsl  ssao_PS.hlsl  ssr_PS.hlsl  ssr_blur_PS.hlsl  ssr_merge_PS.hlsl  vertex.hlsl  vertex_normal.hlsl  vertex_normal_sm.hlsl  vertex_normal_texture.hlsl  vertex_normal_texture_sm.hlsl  vertex_post_process.hlsl
LibraryDX12/Shaders/3D/: normal_PS.hlsl  normal_VS.hlsl  normal_texture_PS.hlsl  normal_texture_VS.hlsl  texture_normal_map_PS.hlsl  texture_normal_map_VS.hlsl
LibraryDX12/Shaders/PostProcess/: Fxaa3_11.h  (+8 more)
LibraryDX12/Source/: ApplicationImpl.cpp  ApplicationImpl.h  CMakeLists.txt  CameraImpl.cpp  CameraImpl.h  CommandAllocatorManager.cpp  CommandAllocatorManager.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  ConstantBuffers.h  Event.cpp  Event.h  Fence.cpp  Fence.h  MeshImpl.cpp  MeshImpl.h  ObjectImpl.cpp  ObjectImpl.h  PipelineStateController.cpp  PipelineStateController.h  ResourceUsageTracker.cpp  ResourceUsageTracker.h  SceneImpl.cpp  SceneImpl.h  SwapChain.cpp  SwapChain.h  VertexOrIndexBuffer.h  WindowImpl.cpp  WindowImpl.h
LibraryDX12/Synchronization/: CMakeLists.txt  Event.cpp  Event.h  Fence.cpp  Fence.h  KernelEvent.cpp  KernelEvent.h
LibraryDX12/Threading/: AsyncLoadableObject.h  BackgroundWorker.cpp  BackgroundWorker.h  BackgroundWorkerController.cpp  BackgroundWorkerController.h  BackgroundWorkerManager.cpp  BackgroundWorkerManager.h  BlockingQueue.h  CMakeLists.txt  CpuGpuOperation.h  EventImpl.h  EventImpl.inl
LibraryDX12/Utility/: AlternatingResources.h  BitHelper.h  CMakeLists.txt  DxObjectNaming.h  DxgiFormatHelper.h  FileHelper.h  GetComPtrRefCount.h  GpuDependency.h  LazyLoadHelper.h  LookAtHandler.h  MathHelper.h  StbImageImplementation.cpp  ThrowIfFailed.h
LibraryDX12/Window/: CMakeLists.txt  SwapChain.cpp  SwapChain.h  WindowClassFactory.cpp  WindowClassFactory.h  WindowImpl.cpp  WindowImpl.h
LibraryDX12/Wrappers/: CMakeLists.txt  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Event.cpp  Fence.h  Resource.cpp  Resource.h  SwapChain.cpp  SwapChain.h
UnitTests/: CMakeLists.txt  main.cpp
UnitTests/Resource/: CMakeLists.txt  ResourceStateControllerTests.cpp  ResourceStateTests.cpp
UnitTests/Utility/: AlternatingResourcesTests.cpp  CMakeLists.txt  MathHelperTests.cpp
(+25 files in other folders)
