cmake_minimum_required (VERSION 2.6)
cmake_policy(SET CMP0012 NEW)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
project("DXD")
include(CMakeMacros.cmake)
include(CMakeValues.cmake)
validate_parameters(CMAKE_BUILD_TYPE EXTERNAL_LIBS_BIN_PATH DISTRIBUTION_MODE)

add_subdirectory("Application")
add_subdirectory("LibraryDX12")
add_subdirectory("UnitTests")
add_subdirectory("Documentation")
